--- a/views/shorten.ejs
+++ b/views/shorten.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="cont">
-        <a id="myInput" href=<%=inputUrl%>><%=newUrl%></a>
+        <a target="_blank" id="myInput" href=<%=inputUrl%>><%=newUrl%></a>
         <button onclick="myFunction()">copy url</button>
     </div>
     <script>
